angepasstes pom